--- a/Library_LJ/res/layout/banner_view.xml
+++ b/Library_LJ/res/layout/banner_view.xml
@@ -2,11 +2,11 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
-	<com.chen.weixin.test.MyViewPager
+	<com.lj.library.widget.viewpager.MyViewPager
 		android:id="@+id/view_pager"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent" >
-	</com.chen.weixin.test.MyViewPager>
+	</com.lj.library.widget.viewpager.MyViewPager>
 	<LinearLayout
 		android:id="@+id/indicator_llyt"
 		android:layout_width="wrap_content"
