--- a/Library_LJ/res/values/styles.xml
+++ b/Library_LJ/res/values/styles.xml
@@ -1,6 +1,10 @@
 <resources>
 	<!-- Application theme. -->
-	<style name="AppTheme" parent="android:Theme.Light"> <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+	<style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"></style>
+	<style name="AppTheme" parent="AppBaseTheme">
+		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
+		<item name="android:windowBackground">@null</item>
+		<item name="android:colorBackground">@null</item>
 	</style>
 	<!-- 自定义dialog -->
 	<style name="BaseDialogTheme" parent="android:Theme.Dialog">
