优化对话框，增加IOS类型加载对话框
优化对话框，增加IOS类型加载对话框

--- a/Library_LJ/res/values/styles.xml
+++ b/Library_LJ/res/values/styles.xml
@@ -1,10 +1,7 @@
 <resources>
 	<!-- Application theme. -->
 	<style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"></style>
-	<style name="AppTheme" parent="AppBaseTheme">
-		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
-		<item name="android:windowBackground">@null</item>
-		<item name="android:colorBackground">@null</item>
+	<style name="AppTheme" parent="AppBaseTheme">		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
 	</style>
 	<!-- 自定义dialog -->
 	<style name="BaseDialogTheme" parent="android:Theme.Dialog">
