--- a/Library_LJ/app/src/main/res/layout/frame_anim_fragment.xml
+++ b/Library_LJ/app/src/main/res/layout/frame_anim_fragment.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/xml_btn"
+        <ImageView
+            android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:text="xml加载动画" />
+            android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/java_btn"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="8dp"
-            android:text="java加载动画" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <Button
+                android:id="@+id/xml_btn"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:text="xml加载动画" />
+
+            <Button
+                android:id="@+id/java_btn"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:text="java加载动画" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
