将图片保存在drawble文件夹下, 修改网络回调为强引用
将图片保存在drawble文件夹下, 修改网络回调为强引用,如果需要保证网络回调不造成内容泄漏,应当在传入接口注意不要把activity等实例给传进去,而不是把回调引用设置成弱引用

--- a/Library_LJ/app/src/main/res/layout/tween_anim_fragment.xml
+++ b/Library_LJ/app/src/main/res/layout/tween_anim_fragment.xml
@@ -11,7 +11,7 @@
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:src="@mipmap/img0003"
+            android:src="@drawable/img0003"
             android:layout_height="wrap_content" />
 
         <LinearLayout
