--- a/Library_LJ/app/src/main/res/anim/anim_list.xml
+++ b/Library_LJ/app/src/main/res/anim/anim_list.xml
@@ -2,36 +2,36 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="true">
     <item
-        android:drawable="@mipmap/img0001"
+        android:drawable="@drawable/img0001"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0002"
+        android:drawable="@drawable/img0002"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0003"
+        android:drawable="@drawable/img0003"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0004"
+        android:drawable="@drawable/img0004"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0005"
+        android:drawable="@drawable/img0005"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0006"
+        android:drawable="@drawable/img0006"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0007"
+        android:drawable="@drawable/img0007"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0008"
+        android:drawable="@drawable/img0008"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0009"
+        android:drawable="@drawable/img0009"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0001"
+        android:drawable="@drawable/img0001"
         android:duration="500" />
     <item
-        android:drawable="@mipmap/img0002"
+        android:drawable="@drawable/img0002"
         android:duration="500" />
 </animation-list>
