--- a/Library_LJ/app/src/main/res/layout/animator_set_fragment.xml
+++ b/Library_LJ/app/src/main/res/layout/animator_set_fragment.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@mipmap/bol_blue"/>
+        android:src="@drawable/bol_blue"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
