--- a/Library_LJ/app/src/main/res/layout/include_single_anim.xml
+++ b/Library_LJ/app/src/main/res/layout/include_single_anim.xml
@@ -12,7 +12,7 @@
             android:id="@+id/image_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@mipmap/img0003"/>
+            android:src="@drawable/img0003"/>
 
         <Button
             android:id="@+id/start_anim_btn"
