--- a/Library_LJ/app/src/main/res/layout/object_animator_fragment.xml
+++ b/Library_LJ/app/src/main/res/layout/object_animator_fragment.xml
@@ -9,6 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:src="@mipmap/mv"/>
+        android:src="@drawable/mv"/>
 
 </FrameLayout>
