--- a/Library_LJ/app/src/main/res/layout/property_value_holder_fragment.xml
+++ b/Library_LJ/app/src/main/res/layout/property_value_holder_fragment.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@mipmap/mv"/>
+        android:src="@drawable/mv"/>
 
     <Button
         android:id="@+id/start_anim_btn"
