--- a/Library_LJ/app/src/main/res/layout/value_animation_fragment.xml
+++ b/Library_LJ/app/src/main/res/layout/value_animation_fragment.xml
@@ -8,7 +8,7 @@
         android:id="@+id/image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/bol_blue"/>
+        android:src="@drawable/bol_blue"/>
 
     <LinearLayout
         android:layout_width="match_parent"
