--- a/Library_LJ/app/src/main/res/values/styles.xml
+++ b/Library_LJ/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-	<!-- Application theme. -->
+	<!-- Application theme.   mce_bogus="1" -->
 	<style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"></style>
 	<style name="AppTheme" parent="AppBaseTheme">		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
 	</style>
