--- a/Library_LJ/app/src/main/res/values/styles.xml
+++ b/Library_LJ/app/src/main/res/values/styles.xml
@@ -1,7 +1,26 @@
 <resources>
-	<!-- Application theme.   mce_bogus="1" -->
+
+    <!-- animation 样式 -->
+    <style name="activityAnimation" parent="@android:style/Animation">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
+    </style>
+
+    <style name="activityBottomInBottomOutAnimation" parent="@android:style/Animation">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_bottom_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_bottom_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_bottom_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_bottom_out</item>
+    </style>
+
+    <!-- Application theme.   mce_bogus="1" -->
 	<style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"></style>
 	<style name="AppTheme" parent="AppBaseTheme">		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:windowBackground">@null</item>
+        <item name="android:windowSoftInputMode">stateAlwaysHidden</item>
+        <item name="android:windowAnimationStyle">@style/activityAnimation</item>
 	</style>
 	<!-- 自定义dialog -->
 	<style name="BaseDialogTheme" parent="android:Theme.Dialog">
@@ -12,4 +31,8 @@
 		<item name="android:backgroundDimEnabled">true</item>
 		<item name="android:backgroundDimAmount">0.0</item>
 	</style>
+    <!-- 启动页的主题 -->
+    <style name="Launcher" parent="android:Theme.Light.NoTitleBar.Fullscreen">
+        <item name="android:windowBackground">@drawable/img0004</item>
+    </style>
 </resources>
