更换启动页图片
更换启动页图片

--- a/Library_LJ/app/src/main/res/values/styles.xml
+++ b/Library_LJ/app/src/main/res/values/styles.xml
@@ -33,6 +33,6 @@
 	</style>
     <!-- 启动页的主题 -->
     <style name="Launcher" parent="android:Theme.Light.NoTitleBar.Fullscreen">
-        <item name="android:windowBackground">@drawable/img0004</item>
+        <item name="android:windowBackground">@drawable/splash_loading</item>
     </style>
 </resources>
