--- a/Library_LJ/app/src/main/res/layout/test_fragment.xml
+++ b/Library_LJ/app/src/main/res/layout/test_fragment.xml
@@ -6,7 +6,9 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="测试Dagger2"/>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:text="测试页面"/>
 
 </LinearLayout>
