增加Translucent app bar的实现
对android4.4及以上的版本实现Translucent app bar的功能，
4.4系统的情况下，弄一个跟状态栏一样高的View，将其顶到状态栏下面
以实现修改状态栏背景的目的。
5.0及以上系统的情况下，直接修改状态栏的背景色。

--- a/Library_LJ/app/src/main/res/values/styles.xml
+++ b/Library_LJ/app/src/main/res/values/styles.xml
@@ -16,11 +16,18 @@
     </style>
 
     <!-- Application theme.   mce_bogus="1" -->
-	<style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"></style>
-	<style name="AppTheme" parent="AppBaseTheme">		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
+	<!--<style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"></style>-->
+    <!-- Activity继承v7包的AppCompatActivity的话，主题需要继承v7包的Theme.AppCompat下的主题-->
+	<style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@null</item>
         <item name="android:windowSoftInputMode">stateAlwaysHidden</item>
         <item name="android:windowAnimationStyle">@style/activityAnimation</item>
+        <!-- 修改Theme.AppCompat下主题中的属性，更改app bar的底色.ActionBar/ToolBar都是叫app bar-->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    </style>
+	<style name="AppTheme" parent="AppBaseTheme">		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
 	</style>
 	<!-- 自定义dialog -->
 	<style name="BaseDialogTheme" parent="android:Theme.Dialog">
