--- a/Library_LJ/app/src/main/res/layout/activity_main.xml
+++ b/Library_LJ/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,17 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context="${packageName}.${activityClass}" >
-	<FrameLayout
-		android:id="@+id/fragment_container"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:background="@android:color/white">
-	</FrameLayout>
-</merge>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+    <View
+        android:id="@+id/status_bar_holder_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/colorPrimaryDark"/>
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+    </FrameLayout>
+</LinearLayout>
