--- a/Library_LJ/app/src/main/res/values-v14/styles.xml
+++ b/Library_LJ/app/src/main/res/values-v14/styles.xml
@@ -1,9 +1,1 @@
-<resources>
-	<!--
-        Base application theme for API 14+. This theme completely replaces
-        AppBaseTheme from BOTH res/values/styles.xml and
-        res/values-v11/styles.xml on API 14+ devices.
-	-->
-	<style name="AppBaseTheme" parent="android:Theme.DeviceDefault.Light.NoActionBar"> <!-- API 14 theme customizations can go here. -->
-	</style>
-</resources>
+<resources>    <!--<style name="AppTheme" parent="AppBaseTheme"/> -->    <style name="AppTheme" parent="AppBaseTheme"/></resources>
