插入热修复框架Tinker
插入热修复框架Tinker

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,11 +6,13 @@
 
     <include layout="@layout/include_toolbar"/>
 
-    <ListView
+    <com.lj.library.widget.renderperform.CustomListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:cacheColorHint="@android:color/transparent"
         android:drawSelectorOnTop="false"
+        android:smoothScrollbar="true"
+        android:animationCache="false"
         android:layout_height="match_parent" />
 
 </LinearLayout>
