--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -8,5 +8,7 @@
     android:orientation="vertical">
 
     <include layout="@layout/include_normal_header" />
+    <include layout="@layout/include_loading"/>
+    <include layout="@layout/include_no_network"/>
 
 </LinearLayout>
