--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -6,9 +6,15 @@
     android:background="@android:color/white"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
+    <!-- 状态栏占位-->
+    <View
+        android:id="@+id/status_bar_holder_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/colorPrimaryDark"/>
 
     <include layout="@layout/include_normal_header" />
-    <include layout="@layout/include_loading"/>
-    <include layout="@layout/include_no_network"/>
+    <!--<include layout="@layout/include_loading"/>-->
+    <!--<include layout="@layout/include_no_network"/>-->
 
 </LinearLayout>
