--- a/app/src/main/res/layout/include_normal_header.xml
+++ b/app/src/main/res/layout/include_normal_header.xml
@@ -4,4 +4,21 @@
               android:layout_width="match_parent"
               android:layout_height="@dimen/height_normal_touch_view">
 
+    <ImageView
+        android:id="@+id/back_iv"
+        android:layout_width="@dimen/width_normal_touch_view"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|center_vertical"
+        android:scaleType="centerInside"
+        android:src="@drawable/common_ic_back" />
+
+    <TextView
+        android:id="@+id/title_tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:maxLines="1"
+        android:paddingRight="@dimen/width_normal_touch_view"
+        android:textSize="@dimen/text_size_large" />
+
 </LinearLayout>
