--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#F44336</color>     <!-- app bar的底色-->
     <color name="colorPrimaryDark">#D32F2F</color> <!-- 状态栏的底色-->
     <color name="colorAccent">#FF4081</color>      <!-- 全局色调，查看http://892848153.iteye.com/blog/2313507 -->
+
+    <color name="mainBlack">#333333</color>
 </resources>
