--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>      <!-- 全局色调，查看http://892848153.iteye.com/blog/2313507 -->
 
     <color name="mainBlack">#333333</color>
+
+    <color name="gray_lighter">#e5e5e5</color>
+    <color name="gray_darker">#d9d9d9</color>
 </resources>
