--- a/app/src/main/res/layout/include_loading.xml
+++ b/app/src/main/res/layout/include_loading.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/black"
         android:indeterminate="false"
         android:indeterminateDrawable="@drawable/ar_loading_progress"
         android:indeterminateDuration="@android:integer/config_mediumAnimTime"/>
