--- a/app/src/main/res/layout/include_loading_error_layout.xml
+++ b/app/src/main/res/layout/include_loading_error_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/no_network_layout"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                android:id="@+id/no_network_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/gray_lighter"
+                android:orientation="vertical">
 
     <ImageView
         android:id="@+id/error_ic_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_above="@+id/prompt_tv"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/space_large"
         android:background="@drawable/common_ic_loading_error"/>
 
@@ -26,10 +27,10 @@
         android:id="@+id/retry_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_below="@+id/prompt_tv"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/space_large"
-        android:layout_below="@+id/prompt_tv"
+        android:gravity="center"
         android:text="retry"/>
 
 
