--- a/app/src/main/res/layout/include_loading_error_layout.xml
+++ b/app/src/main/res/layout/include_loading_error_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/prompt_tv"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/space_large"
+        android:layout_marginBottom="@dimen/common_large_space"
         android:background="@drawable/common_ic_loading_error"/>
 
     <TextView
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/prompt_tv"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/space_large"
+        android:layout_marginTop="@dimen/common_large_space"
         android:gravity="center"
         android:text="retry"/>
 
