--- a/app/src/main/res/layout/include_normal_header.xml
+++ b/app/src/main/res/layout/include_normal_header.xml
@@ -5,13 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_normal_touch_view"
+    android:layout_height="@dimen/common_normal_touch_space"
     android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/back_iv"
-        android:layout_width="@dimen/height_normal_touch_view"
-        android:layout_height="@dimen/height_normal_touch_view"
+        android:layout_width="@dimen/common_normal_touch_space"
+        android:layout_height="@dimen/common_normal_touch_space"
         android:scaleType="centerInside"
         android:src="@drawable/common_ic_back"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:gravity="center"
         android:maxLines="1"
         android:textColor="@color/mainBlack"
-        android:textSize="@dimen/text_size_xlarge"
+        android:textSize="@dimen/common_xlarge_text_size"
         tools:text="Title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,8 +33,8 @@
 
     <ImageView
         android:id="@+id/right_iv"
-        android:layout_width="@dimen/height_normal_touch_view"
-        android:layout_height="@dimen/height_normal_touch_view"
+        android:layout_width="@dimen/common_normal_touch_space"
+        android:layout_height="@dimen/common_normal_touch_space"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
