--- a/app/src/main/res/layout/my_architecture1_activity.xml
+++ b/app/src/main/res/layout/my_architecture1_activity.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.lj.library.activity.MvvmArchitectureViewModel1"/>
+    </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,10 +19,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="adadada"
+            android:text="DADWDQWD"
             app:layout_constraintTop_toBottomOf="@+id/normal_header_cl"/>
-
-
 
     </android.support.constraint.ConstraintLayout>
 
