--- a/app/src/main/res/layout/banner_fragment.xml
+++ b/app/src/main/res/layout/banner_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,5 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </com.lj.library.widget.viewpager.banner.BannerView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="Android Custom View Attrs"/>
+    <com.lj.library.widget.CustomView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:custom_integer="1233"/>
+
 
 </LinearLayout>
