--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <attr name="global_attr_one" format="string"/>
+    <attr name="global_attr_two" format="integer"/>
+
     <declare-styleable name="CustomButton">
         <attr name="attrOne" format="string"/>
         <attr name="attrTwo" format="integer"/>
@@ -16,7 +19,7 @@
         <attr name="custom_reference" format="reference"/>
         <attr name="custom_string" format="string"/>
         <!-- 位或运算，可以指定多个 -->
-        <attr name="custom_flag" format="flag">
+        <attr name="custom_flag">
             <flag name="normal" value="0" />
             <flag name="bold" value="1" />
             <flag name="italic" value="2" />
