--- a/app/src/main/res/layout/layout_transition_fragment.xml
+++ b/app/src/main/res/layout/layout_transition_fragment.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:animateLayoutChanges="true">
+<!--    android:layoutAnimation="@anim/alpha_demo"   animate the group's children after the first layout.-->
+    <!-- android:animateLayoutChanges="true"  会调用ViewGroup的setLayoutTransition(new LayoutTransition()) -->
 
     <Button
         android:id="@+id/add_btn"
