--- a/app/src/main/res/layout/my_architecture1_activity.xml
+++ b/app/src/main/res/layout/my_architecture1_activity.xml
@@ -8,7 +8,7 @@
             type="com.lj.library.activity.MvvmArchitectureViewModel1"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
@@ -22,6 +22,6 @@
             android:text="DADWDQWD"
             app:layout_constraintTop_toBottomOf="@+id/normal_header_cl"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
