--- a/app/src/main/res/layout/tab_host_activity.xml
+++ b/app/src/main/res/layout/tab_host_activity.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1">
     </FrameLayout>
 
-    <android.support.v4.app.FragmentTabHost
+    <androidx.fragment.app.FragmentTabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -21,5 +21,5 @@
             android:id="@android:id/tabcontent"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
-    </android.support.v4.app.FragmentTabHost>
+    </androidx.fragment.app.FragmentTabHost>
 </LinearLayout>
