添加继承View自定义View的模版

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -32,4 +32,8 @@
         </attr>
         <attr name="android:text"/>
     </declare-styleable>
+
+    <declare-styleable name="TemplateView">
+        <attr name="tv_color" format="color"/>
+    </declare-styleable>
 </resources>
